<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="800px"
            android:src="@drawable/login" />

        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_centerInParent="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="50dp"
            android:text="Login"
            android:textColor="#fff"
            android:textSize="30px"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="120px"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:layout_marginBottom="25dp"
            android:background="@drawable/text_input"
            android:drawableLeft="@drawable/ic_baseline_favorite_25"
            android:drawablePadding="10dp"
            android:hint="@string/UserName"
            android:padding="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/text_input"
            android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/Password"
            android:padding="20dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_back"
            android:text="@string/login" />
    </LinearLayout>
</LinearLayout>